--- a/employee-profile.html
+++ b/employee-profile.html
@@ -698,6 +698,22 @@
                                                               </div>
                                                             </div>
                                                           </div>
+                                                          <div class="col-sm-4">
+                                                            <div class="form-group">
+                                                              <label class="control-label col-sm-5 lbl-pad-top" for="email">Domain Expertise:</label>
+                                                              <div class="col-sm-7">
+                                                                <p class="form-control-static lbl-pad-top-btm">Public Information</p>
+                                                              </div>
+                                                            </div>
+                                                          </div>
+                                                          <div class="col-sm-4">
+                                                            <div class="form-group">
+                                                              <label class="control-label col-sm-5 lbl-pad-top" for="email">Experience:</label>
+                                                              <div class="col-sm-7">
+                                                                <p class="form-control-static lbl-pad-top-btm">2</p>
+                                                              </div>
+                                                            </div>
+                                                          </div>
                                                         </div>
                                                         <div class="form-title">
                                                             Contact Information
@@ -775,7 +791,23 @@
                                                           </div>
                                                           <div class="col-sm-4">
                                                               <div class="form-group">
-                                                                <label for="inputsm">Mobile</label>
+                                                                <label for="inputsm">Mobile Number</label>
+                                                                  <span class="input-icon icon-right">
+                                                                      <input type="text" class="form-control">
+                                                                  </span>
+                                                              </div>
+                                                          </div>
+                                                          <div class="col-sm-4">
+                                                              <div class="form-group">
+                                                                <label for="inputsm">Domain Expertise</label>
+                                                                  <span class="input-icon icon-right">
+                                                                      <input type="text" class="form-control">
+                                                                  </span>
+                                                              </div>
+                                                          </div>
+                                                          <div class="col-sm-4">
+                                                              <div class="form-group">
+                                                                <label for="inputsm">Experience</label>
                                                                   <span class="input-icon icon-right">
                                                                       <input type="text" class="form-control">
                                                                   </span>
