--- a/employee.html
+++ b/employee.html
@@ -360,9 +360,9 @@
                     </a>
                   </li>
                   <li>
-                    <a href="jobs.html">
+                    <a href="configuration.html">
                       <i class="menu-icon fa fa-info pink"></i>
-                      <span class="menu-text"> Jobs </span>
+                      <span class="menu-text"> Configuration </span>
                     </a>
                   </li>
                   <li>
@@ -641,6 +641,8 @@
                                 <tr>
                                   <th>Name</th>
                                   <th>Email</th>
+                                  <th>Domain Expertise</th>
+                                  <th>Experience</th>
                                   <th>Status</th>
                                   <th>Action</th>
                                 </tr>
@@ -649,6 +651,8 @@
                                 <tr>
                                   <td>Jone Lee</td>
                                   <td>Jone.Lee@pir.com</td>
+                                  <td>Homewares</td>
+                                  <td>2</td>
                                   <td>
                                     <label class="switch-btn switch-flat">
                                     	<input class="switch-input" type="checkbox">
@@ -663,6 +667,8 @@
                                 <tr>
                                   <td>James smith</td>
                                   <td>James.smith@pir.com</td>
+                                  <td>Public Information</td>
+                                  <td>2</td>
                                   <td>
                                     <label class="switch-btn switch-flat">
                                     	<input class="switch-input" type="checkbox">
@@ -677,6 +683,8 @@
                                 <tr>
                                   <td>Strok poel</td>
                                   <td>Strok.poel@pir.com</td>
+                                  <td>Financial & Banking</td>
+                                  <td>2</td>
                                   <td>
                                     <label class="switch-btn switch-flat">
                                     	<input class="switch-input" type="checkbox">
