--- a/forgotpassword.html
+++ b/forgotpassword.html
@@ -48,12 +48,32 @@
 
 </div>
       <div class="loginbox-submit text-center">
-        <input type="button" class="btn btn-block cust-btn" value="Save">
+        <input type="button" class="btn btn-block cust-btn" data-toggle="modal" data-target=".successfull-msg" value="Save">
       </div>
     </div>
 
   </div>
+  <div class="modal fade successfull-msg in" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
+          <div class="modal-dialog modal-sm">
+              <div class="modal-content">
 
+                  <div class="modal-header">
+                      <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                      <h4 class="modal-title" id="mySmallModalLabel">Alert</h4>
+                  </div>
+                  <div class="modal-body">
+                    <div class="row">
+                      <div class="col-md-12">
+                        <p>Your password changed successfully..</p>
+                        <div class="text-center">
+                        <a href="login.html" class="btn cust-btn mrg-btm-10">Ok</a>
+                      </div>
+                      </div>
+                    </div>
+                  </div>
+              </div><!-- /.modal-content -->
+          </div><!-- /.modal-dialog -->
+      </div>
   <!--Basic Scripts-->
   <script src="assets/js/jquery.min.js"></script>
   <script src="assets/js/bootstrap.min.js"></script>
