--- a/chat.html
+++ b/chat.html
@@ -368,9 +368,9 @@
                     </a>
                   </li>
                   <li class="active">
-                    <a href="jobs.html">
+                    <a href="configuration.html">
                       <i class="menu-icon fa fa-info pink"></i>
-                      <span class="menu-text"> Jobs </span>
+                      <span class="menu-text"> Configuration </span>
                     </a>
                   </li>
                   <li>
