--- a/client.html
+++ b/client.html
@@ -360,9 +360,9 @@
                     </a>
                   </li>
                   <li>
-                    <a href="jobs.html">
+                    <a href="configuration.html">
                       <i class="menu-icon fa fa-info pink"></i>
-                      <span class="menu-text"> Jobs </span>
+                      <span class="menu-text"> Configuration </span>
                     </a>
                   </li>
                   <li>
@@ -375,7 +375,7 @@
                 <!-- /Sidebar Menu -->
             </div>
             <!-- /Page Sidebar -->
-            
+
             <!-- Page Content -->
             <div class="page-content">
                 <!-- Page Breadcrumb -->
