--- a/configuration.html
+++ b/configuration.html
@@ -3,7 +3,7 @@
 <!-- Head -->
 <head>
   <meta charset="utf-8" />
-  <title>Employee Report Upload</title>
+  <title>Configuration</title>
 
   <meta name="description" content="user profile" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -15,7 +15,6 @@
   <link href="assets/css/bootstrap.min.css" rel="stylesheet" />
   <link id="bootstrap-rtl-link" href="" rel="stylesheet" />
   <link href="assets/css/font-awesome.min.css" rel="stylesheet" />
-  <link href="assets/css/upload.css" rel="stylesheet" />
   <link href="assets/css/custom.css" rel="stylesheet" />
   <link href="assets/css/weather-icons.min.css" rel="stylesheet" />
 
@@ -55,7 +54,7 @@
         <!-- /Navbar Barnd -->
         <!-- Sidebar Collapse -->
         <div class="sidebar-collapse" id="sidebar-collapse">
-          <i class="collapse-icon fa fa-caret-down"></i>
+          <i class="collapse-icon fa fa-bars"></i>
         </div>
         <!-- /Sidebar Collapse -->
         <!-- Account Area and Settings --->
@@ -296,17 +295,17 @@
                 <img src="assets/img/user.png" class="img-responsive">
               </div>
               <section>
-                <h2><span class="profile"><span>Employee</span></span></h2>
+                <h2><span class="profile"><span>Admin</span></span></h2>
               </section>
             </a>
             <!--Login Area Dropdown-->
             <ul class="pull-right dropdown-menu dropdown-arrow dropdown-login-area">
-              <li class="username"><a>Employee</a></li>
-              <li class="email"><a>employee@pir.com</a></li>
+              <li class="username"><a>Admin</a></li>
+              <li class="email"><a>admin.com</a></li>
               <!--Avatar Area-->
 
               <li class="edit">
-                <a href="employee-profile.html" class="pull-right">Edit Profile</a>
+                <a href="profile.html" class="pull-right">Edit Profile</a>
               </li>
 
               <li class="dropdown-footer">
@@ -343,9 +342,33 @@
       <ul class="nav sidebar-menu">
         <!--Dashboard-->
         <li>
-          <a href="employee-index.html">
-            <i class="menu-icon glyphicon glyphicon-home"></i>
+          <a href="index.html">
+            <i class="menu-icon glyphicon glyphicon-dashboard red"></i>
             <span class="menu-text"> Dashboard </span>
+          </a>
+        </li>
+        <li>
+          <a href="employee.html">
+            <i class="menu-icon fa fa-users yellow"></i>
+            <span class="menu-text"> Employees </span>
+          </a>
+        </li>
+        <li>
+          <a href="client.html">
+            <i class="menu-icon glyphicon glyphicon-copyright-mark green"></i>
+            <span class="menu-text"> Clients </span>
+          </a>
+        </li>
+        <li class="active">
+          <a href="jobs.html">
+            <i class="menu-icon fa fa-info pink"></i>
+            <span class="menu-text"> Configuration </span>
+          </a>
+        </li>
+        <li>
+          <a href="payment-settings.html">
+            <i class="menu-icon fa fa-money blue"></i>
+            <span class="menu-text"> Payment Settings </span>
           </a>
         </li>
       </ul>
@@ -595,44 +618,149 @@
         <ul class="breadcrumb">
           <li class="active">
             <i class="fa fa-home"></i>
-            <a href="#">Upload Document</a>
+            <a href="#">Configuration</a>
           </li>
         </ul>
+        <div class="header-right">
+          <a type="submit" href="" data-toggle="modal" data-target=".add-category" class="btn cust-btn">Add Category</a>
+        </div>
       </div>
       <!-- /Page Breadcrumb -->
 
-  <!-- Page Body -->
-  <div class="page-body">
-    <div class="row">
-      <div class="col-md-12 col-lg-12">
-        <div class="page-view">
-          <div class="form-title">
-            Upload Document
-          </div>
-          <form id="upload" method="post" action="upload.php" enctype="multipart/form-data">
-            <div id="drop">
-              Drop Here
+      <!-- Page Body -->
+      <div class="page-body">
 
-              <a>Browse</a>
-              <input type="file" name="upl" multiple />
+        <div class="row">
+          <div class="col-md-12 col-lg-12">
+            <div class="page-view">
+              <div class="form-title">
+                Configuration
+              </div>
+              <div class="table-responsive mrg-top-10">
+                <table class="table table-striped table-design employee-table">
+                  <thead>
+                    <tr>
+                      <th>Date</th>
+                      <th>Category</th>
+                      <th>Sub Category</th>
+                      <th>Price</th>
+                      <th>Action</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr>
+                      <td>03-03-18</td>
+                      <td>Healthcare</td>
+                      <td>Veterinary</td>
+                      <td>$5000</td>
+                      <td>
+                        <a href="job-description.html" data-toggle="tooltip" data-placement="top" data-original-title="Edit" class="fa fa-pencil-square-o edit edit-fa"></a>
+                        <a href="" data-toggle="tooltip" data-placement="top" data-original-title="Delete" class="fa fa-trash delete edit-fa"></a>
+                        <a href="job-description.html" data-toggle="modal" data-target=".add-sub-category" data-placement="top" data-original-title="Assign Sub Category" class="fa fa-check-square-o assign edit-fa"></a>
+                      </td>
+                    </tr>
+                    <tr>
+                      <td>11-03-18</td>
+                      <td>Leisure</td>
+                      <td>Gambling</td>
+                      <td>$8000</td>
+                      <td>
+                        <a href="job-description.html" data-toggle="tooltip" data-placement="top" data-original-title="Edit" class="fa fa-pencil-square-o edit edit-fa"></a>
+                        <a href="" data-toggle="tooltip" data-placement="top" data-original-title="Delete" class="fa fa-trash delete edit-fa"></a>
+                        <a href="job-description.html" data-toggle="modal" data-target=".add-sub-category" data-placement="top" data-original-title="Assign Sub Category" class="fa fa-check-square-o assign edit-fa"></a>
+                      </td>
+                    </tr>
+                    <tr>
+                      <td>25-03-18</td>
+                      <td>Media / Entertainment</td>
+                      <td>Music</td>
+                      <td>$11000</td>
+                      <td>
+                        <a href="job-description.html" data-toggle="tooltip" data-placement="top" data-original-title="Edit" class="fa fa-pencil-square-o edit edit-fa"></a>
+                        <a href="" data-toggle="tooltip" data-placement="top" data-original-title="Delete" class="fa fa-trash delete edit-fa"></a>
+                        <a href="job-description.html" data-toggle="modal" data-target=".add-sub-category" data-placement="top" data-original-title="Assign Sub Category" class="fa fa-check-square-o assign edit-fa"></a>
+                      </td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
+
             </div>
-            <ul>
-              <!-- The file uploads will be shown here -->
-            </ul>
-          </form>
+          </div>
+        </div>
+
+      </div>
+      <!-- /Page Body -->
+    </div>
+    <!-- /Page Content -->
+  </div>
+  <!-- /Page Container -->
+  <!-- Main Container -->
+  <div>
+  </div>
+</div>
+
+<div class="modal fade add-category in" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-sm">
+    <div class="modal-content">
+
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+        <h4 class="modal-title" id="mySmallModalLabel">Add Categories</h4>
+      </div>
+      <div class="modal-body">
+        <div class="row">
+          <div class="col-md-12">
+
+            <div class="form-group">
+              <label for="inputsm">Category</label>
+              <span class="input-icon icon-right">
+                <input type="text" class="form-control">
+              </span>
+            </div>
+            <div class="text-center">
+              <button type="submit" class="btn cust-btn mrg-btm-10">Save</button>
+            </div>
+          </div>
         </div>
       </div>
-    </div>
-  </div>
-  <!-- /Page Body -->
-</div>
-<!-- /Page Content -->
-</div>
-<!-- /Page Container -->
-<!-- Main Container -->
-
+    </div><!-- /.modal-content -->
+  </div><!-- /.modal-dialog -->
 </div>
 
+<div class="modal fade add-sub-category in" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-sm">
+    <div class="modal-content">
+
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+        <h4 class="modal-title" id="mySmallModalLabel">Add Sub Categories</h4>
+      </div>
+      <div class="modal-body">
+        <div class="row">
+          <div class="col-md-12">
+
+            <div class="form-group">
+              <label for="inputsm">Sub Category</label>
+              <span class="input-icon icon-right">
+                <input type="text" class="form-control">
+              </span>
+            </div>
+            <div class="form-group">
+              <label for="inputsm">Price</label>
+              <span class="input-icon icon-right">
+                <input type="text" class="form-control">
+              </span>
+            </div>
+            <div class="text-center">
+              <button type="submit" class="btn cust-btn mrg-btm-10">Save</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div><!-- /.modal-content -->
+  </div><!-- /.modal-dialog -->
+</div>
 <!--Basic Scripts-->
 <script src="assets/js/jquery.min.js"></script>
 <script src="assets/js/bootstrap.min.js"></script>
@@ -648,12 +776,6 @@
 <script src="assets/js/charts/flot/jquery.flot.js"></script>
 <script src="assets/js/charts/flot/jquery.flot.resize.js"></script>
 
-<!-- jQuery File Upload Dependencies -->
-<script src="assets/js/upload/jquery.knob.js"></script>
-<script src="assets/js/upload/jquery.ui.widget.js"></script>
-<script src="assets/js/upload/jquery.iframe-transport.js"></script>
-<script src="assets/js/upload/jquery.fileupload.js"></script>
-<script src="assets/js/upload/script.js"></script>
 
 </body>
 <!--  /Body -->
