--- a/employee-index.html
+++ b/employee-index.html
@@ -347,18 +347,6 @@
             <span class="menu-text"> Dashboard </span>
           </a>
         </li>
-        <li>
-          <a href="employee-jobs.html">
-            <i class="menu-icon fa fa-briefcase red"></i>
-            <span class="menu-text"> Jobs </span>
-          </a>
-        </li>
-        <li>
-          <a href="employee-report-upload.html">
-            <i class="menu-icon fa fa-upload green"></i>
-            <span class="menu-text"> Upload Reports </span>
-          </a>
-        </li>
       </ul>
       <!-- /Sidebar Menu -->
     </div>
@@ -639,214 +627,117 @@ Header Buttons End
 /Page Header -->
 <!-- Page Body -->
 <div class="page-body">
-
-
   <div class="row">
-    <div class="col-sm-7 five-three">
-      <div class="row">
-        <div class="col-sm-4">
-          <div class="dash-card">
-            <div class="dash-content">
-              <div class="dash-card-yellow">
-                <img src="assets/img/card-icon-1.png" class="img-responsive">
-              </div>
-              <div class="dash-card-right">
-                <h3 class="yellow employee-card">Total Orders</h3>
-                <h4>250</h4>
-              </div>
-            </div>
+    <div class="col-md-3">
+      <div class="dash-card">
+        <div class="dash-content">
+          <div class="dash-card-yellow">
+            <img src="assets/img/card-icon-1.png" class="img-responsive">
+          </div>
+          <div class="dash-card-right">
+            <h3 class="yellow">Total Jobs</h3>
+            <h4>250</h4>
           </div>
         </div>
-        <div class="col-sm-4">
-          <div class="dash-card">
-            <div class="dash-content">
-              <div class="dash-card-green">
-                <img src="assets/img/card-icon-2.png" class="img-responsive">
-              </div>
-              <div class="dash-card-right">
-                <h3 class="theme-color employee-card">Apporved Orders</h3>
-                <h4>150</h4>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-sm-4">
-          <div class="dash-card">
-            <div class="dash-content">
-              <div class="dash-card-red">
-                <img src="assets/img/card-icon-3.png" class="img-responsive">
-              </div>
-              <div class="dash-card-right">
-                <h3 class="red employee-card">Rejected Orders</h3>
-                <h4>100</h4>
-              </div>
-            </div>
-          </div>
-        </div><!-- end inner row -->
       </div>
     </div>
-    <div class="col-sm-5 five-two">
-      <div class="row">
-        <div class="col-sm-6">
-          <div class="dash-card">
-            <div class="dash-content">
-              <div class="dash-card-green">
-                <img src="assets/img/card-icon-6.png" class="img-responsive">
-              </div>
-              <div class="dash-card-right">
-                <h3 class="purple employee-card" style="padding-top:15px">Weekly Report</h3>
-
-              </div>
-            </div>
+    <div class="col-md-3">
+      <div class="dash-card">
+        <div class="dash-content">
+          <div class="dash-card-green">
+            <img src="assets/img/card-icon-2.png" class="img-responsive">
+          </div>
+          <div class="dash-card-right">
+            <h3 class="theme-color">Completed Jobs</h3>
+            <h4>150</h4>
           </div>
         </div>
-        <div class="col-sm-6">
-          <div class="dash-card">
-            <div class="dash-content">
-              <div class="dash-card-green">
-                <img src="assets/img/card-icon-5.png" class="img-responsive">
-              </div>
-              <div class="dash-card-right">
-                <h3 class="month-color employee-card" style="padding-top:15px">Monthly Report</h3>
-
-              </div>
-            </div>
-          </div>
-        </div>
-      </div><!-- end inner row -->
+      </div>
     </div>
-  </div>​<!-- end outer row -->
-
-
-
-
-
-
-
+    <div class="col-md-3">
+      <div class="dash-card">
+        <div class="dash-content">
+          <div class="dash-card-red">
+            <img src="assets/img/card-icon-3.png" class="img-responsive">
+          </div>
+          <div class="dash-card-right">
+            <h3 class="red">Pending Jobs</h3>
+            <h4>100</h4>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-3">
+      <div class="dash-card">
+        <div class="dash-content">
+          <div class="dash-card-green">
+            <img src="assets/img/card-icon-4.png" class="img-responsive">
+          </div>
+          <div class="dash-card-right">
+            <h3 class="purple">Jobs in progress</h3>
+            <h4>100</h4>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
   <div class="clearfix"></div>
   <div class="row">
-    <div class="col-lg-8 col-sm-12 col-xs-12">
+    <div class="col-lg-12 col-sm-12 col-xs-12">
       <div class="row">
         <div class="col-lg-12">
           <div class="widget">
             <div class="widget-header bordered-bottom bordered-themesecondary">
               <i class="widget-icon fa fa-tags themesecondary"></i>
-              <span class="widget-caption themesecondary">Notifications</span>
+              <span class="widget-caption themesecondary">Order Details</span>
             </div><!--Widget Header-->
             <div class="widget-body  no-padding">
               <div class="tickets-container">
-                <ul class="tickets-list scrollbar style-1">
-                  <li class="ticket-item ticket-item-green">
-                    <div class="row">
-                      <div class="ticket-user col-lg-7 col-sm-12">
-                        <img src="assets/img/user.png" class="user-avatar">
-                        <span class="user-name">Adam Johnson</span>
-                        <span class="user-at">at</span>
-                        <span class="user-company">Microsoft</span>
-                      </div>
-                      <div class="ticket-time  col-lg-3 col-sm-6 col-xs-12">
-                        <div class="divider hidden-md hidden-sm hidden-xs"></div>
-                        <i class="fa fa-clock-o"></i>
-                        <span class="time">1 Hours Ago</span>
-                      </div>
-                      <div class="ticket-type  col-lg-2 col-sm-6 col-xs-12">
-                        <span class="divider hidden-xs"></span>
-                        <span class="type">Payment</span>
-                      </div>
-                      <div class="ticket-approve">
-                        <img src="assets/img/approve-icon-1.png" class="img-responsive">
-                      </div>
-                    </div>
-                  </li>
-                  <li class="ticket-item ticket-item-green">
-                    <div class="row">
-                      <div class="ticket-user col-lg-7 col-sm-12">
-                        <img src="assets/img/user.png" class="user-avatar">
-                        <span class="user-name">Divyia Phillips</span>
-                        <span class="user-at">at</span>
-                        <span class="user-company">Dribbble</span>
-                      </div>
-                      <div class="ticket-time  col-lg-3 col-sm-6 col-xs-12">
-                        <div class="divider hidden-md hidden-sm hidden-xs"></div>
-                        <i class="fa fa-clock-o"></i>
-                        <span class="time">3 Hours Ago</span>
-                      </div>
-                      <div class="ticket-type  col-lg-2 col-sm-6 col-xs-12">
-                        <span class="divider hidden-xs"></span>
-                        <span class="type">Payment</span>
-                      </div>
-                      <div class="ticket-approve">
-                        <img src="assets/img/approve-icon-1.png" class="img-responsive">
-                      </div>
-                    </div>
-                  </li>
-                  <li class="ticket-item ticket-item-red">
-                    <div class="row">
-                      <div class="ticket-user col-lg-7 col-sm-12">
-                        <img src="assets/img/user.png" class="user-avatar">
-                        <span class="user-name">Nicolai Larson</span>
-                        <span class="user-at">at</span>
-                        <span class="user-company">Google</span>
-                      </div>
-                      <div class="ticket-time  col-lg-3 col-sm-6 col-xs-12">
-                        <div class="divider hidden-md hidden-sm hidden-xs"></div>
-                        <i class="fa fa-clock-o"></i>
-                        <span class="time">18 Hours Ago</span>
-                      </div>
-                      <div class="ticket-type  col-lg-2 col-sm-6 col-xs-12">
-                        <span class="divider hidden-xs"></span>
-                        <span class="type">Issue</span>
-                      </div>
-                      <div class="ticket-rejected">
-                        <img src="assets/img/rejected-icon-1.png" class="img-responsive">
-                      </div>
-                    </div>
-                  </li>
-                  <li class="ticket-item ticket-item-green">
-                    <div class="row">
-                      <div class="ticket-user col-lg-7 col-sm-12">
-                        <img src="assets/img/user.png" class="user-avatar">
-                        <span class="user-name">Bill Jackson</span>
-                        <span class="user-at">at</span>
-                        <span class="user-company">Mabna</span>
-                      </div>
-                      <div class="ticket-time  col-lg-3 col-sm-6 col-xs-12">
-                        <div class="divider hidden-md hidden-sm hidden-xs"></div>
-                        <i class="fa fa-clock-o"></i>
-                        <span class="time">2 days Ago</span>
-                      </div>
-                      <div class="ticket-type  col-lg-2 col-sm-6 col-xs-12">
-                        <span class="divider hidden-xs"></span>
-                        <span class="type">Payment</span>
-                      </div>
-                      <div class="ticket-approve">
-                        <img src="assets/img/approve-icon-1.png" class="img-responsive">
-                      </div>
-                    </div>
-                  </li>
-                  <li class="ticket-item ticket-item-green">
-                    <div class="row">
-                      <div class="ticket-user col-lg-7 col-sm-12">
-                        <img src="assets/img/user.png" class="user-avatar">
-                        <span class="user-name">Eric Clapton</span>
-                        <span class="user-at">at</span>
-                        <span class="user-company">Musicker</span>
-                      </div>
-                      <div class="ticket-time  col-lg-3 col-sm-6 col-xs-12">
-                        <div class="divider hidden-md hidden-sm hidden-xs"></div>
-                        <i class="fa fa-clock-o"></i>
-                        <span class="time">2 days Ago</span>
-                      </div>
-                      <div class="ticket-type  col-lg-2 col-sm-6 col-xs-12">
-                        <span class="divider hidden-xs"></span>
-                        <span class="type">Payment</span>
-                      </div>
-                      <div class="ticket-approve">
-                        <img src="assets/img/approve-icon-1.png" class="img-responsive">
-                      </div>
-                    </div>
-                  </li>
-                </ul>
+                <div class="table-responsive mrg-top-10">
+                  <table class="table table-striped table-design employee-table">
+                    <thead>
+                      <tr>
+                        <th>Assign Date</th>
+                        <th>Job Title</th>
+                        <th>Description</th>
+                        <th>Status</th>
+                        <th>Action</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <tr>
+                        <td>05-03-18</td>
+                        <td>Deep Employee Report</td>
+                        <td>Public Information</td>
+                        <td><span class="red">Pending</span></td>
+                        <td>
+                          <a href="" data-toggle="tooltip" data-placement="top" data-original-title="Download" class="fa fa-download edit edit-fa"></a>
+                          <a href="employee-report-upload.html" data-toggle="tooltip" data-placement="top" data-original-title="Upload" class="fa fa-upload delete edit-fa"></a>
+                        </td>
+                      </tr>
+                      <tr>
+                        <td>11-03-18</td>
+                        <td>Brand Endorsement Report</td>
+                        <td>eCommerce</td>
+                        <td><span class="orange-span">Inprogress</span></td>
+                        <td>
+                          <a href="" data-toggle="tooltip" data-placement="top" data-original-title="Download" class="fa fa-download edit edit-fa"></a>
+                          <a href="employee-report-upload.html" data-toggle="tooltip" data-placement="top" data-original-title="Upload" class="fa fa-upload delete edit-fa"></a>
+                        </td>
+                      </tr>
+                      <tr>
+                        <td>22-03-18</td>
+                        <td>Smith Employee Profile Report</td>
+                        <td>Public Information</td>
+                        <td><span class="green">Completed</span></td>
+                        <td>
+                          <a href="" data-toggle="tooltip" data-placement="top" data-original-title="Download" class="fa fa-download edit edit-fa"></a>
+                          <a href="employee-report-upload.html" data-toggle="tooltip" data-placement="top" data-original-title="Upload" class="fa fa-upload delete edit-fa"></a>
+                        </td>
+                      </tr>
+                    </tbody>
+                  </table>
+                </div>
               </div>
             </div>
           </div>
@@ -854,82 +745,8 @@ Header Buttons End
         </div>
       </div>
     </div>
-    <div class="col-lg-4 col-sm-12 col-xs-12">
-      <div class="widget">
-        <div class="widget-header bordered-bottom bordered-themeprimary">
-          <i class="widget-icon fa fa-tasks themeprimary"></i>
-          <span class="widget-caption themeprimary"> Work Order</span>
-        </div><!--Widget Header-->
-        <div class="widget-body no-padding">
-          <div class="task-container">
-            <!-- <div class="task-search">
-            <span class="input-icon">
-            <input type="text" class="form-control" placeholder="Search Work Order">
-            <i class="fa fa-search gray"></i>
-          </span>
-        </div> -->
-        <div class="scrollbar style-1 scroll-admin">
-          <ul class="tasks-list ">
-            <li class="task-item">
-              <div class="task-check">
-                <label>
-                  <input type="checkbox">
-                  <span class="text"></span>
-                </label>
-              </div>
-              <div class="task-state">
-                <span class="label label-yellow">
-                  In Progress
-                </span>
-              </div>
-              <div class="task-time">1 hour ago</div>
-              <div class="task-body">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</div>
-              <div class="task-creator"><a href="">Cameron Hetfield</a></div>
-              <div class="task-assignedto">assigned to you</div>
-            </li>
-            <li class="task-item">
-              <div class="task-check">
-                <label>
-                  <input type="checkbox">
-                  <span class="text"></span>
-                </label>
-              </div>
-              <div class="task-state">
-                <span class="label label-orange">
-                  Active
-                </span>
-              </div>
-              <div class="task-time">2 hours ago</div>
-              <div class="task-body">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</div>
-              <div class="task-creator"><a href="">Behrang Nitsche</a></div>
-              <div class="task-assignedto">assigned to you</div>
-            </li>
-            <li class="task-item">
-              <div class="task-check">
-                <label>
-                  <input type="checkbox">
-                  <span class="text"></span>
-                </label>
-              </div>
-              <div class="task-state">
-                <span class="label label-palegreen">
-                  Approved
-                </span>
-              </div>
-              <div class="task-time">yesterday</div>
-              <div class="task-body">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</div>
-              <div class="task-creator"><a href="">David Fincher</a></div>
-              <div class="task-assignedto">assigned to Kim</div>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </div><!--Widget Body-->
   </div>
 </div>
-</div>
-</div>
-
 <!-- /Page Body -->
 </div>
 <!-- /Page Content -->
