--- a/employee-login.html
+++ b/employee-login.html
@@ -32,7 +32,7 @@
 <!--Body-->
 <body>
   <div class="login-container animated fadeInDown">
-    <div class="loginbox bg-darkgray">
+    <div class="loginbox bg-darkgray" id="login">
       <div class="log-reg-img">
         <img src="assets/img/logo-color.png" class="img-responsive">
         <hr class="login-hr" />
@@ -44,18 +44,42 @@
       <div class="loginbox-textbox">
         <input type="text" class="form-control" placeholder="Password" />
       </div>
-      <div class="loginbox-forgot">
-        <a href="">Forgot Password?</a>
-      </div>
-      <div class="loginbox-submit">
-        <input type="button" class="btn btn-block cust-btn" value="Login">
-      </div>
-      <div class="loginbox-signup">
-        <a href="client-register.html">Create an account...?</a>
+      <div class="cust-overflow">
+      <!-- <div class="loginbox-remember">
+        <div class="checkbox">
+          <label>
+            <input type="checkbox" class="colored-primary" id="terms-conditions">
+            <span class="text white">Remember Password</span>
+          </label>
+        </div>
+      </div> -->
+      <div class="loginbox-forgot mrg-btm-10">
+        <a id="CustBtn" class="btn cust-btn">Forgot Password?</a>
       </div>
     </div>
+      <div class="loginbox-submit text-center">
+        <input type="button" class="btn btn-block cust-btn" value="Login">
+      </div>
 
+    </div>
+    <div class="loginbox bg-darkgray" id="forgot">
+      <div class="log-reg-img">
+        <img src="assets/img/logo-color.png" class="img-responsive">
+        <hr class="login-hr" />
+      </div>
+      <div class="loginbox-title theme-color">Forgot Password</div>
+      <div class="loginbox-textbox">
+        <input type="text" class="form-control" placeholder="Email" />
+      </div>
+      <div class="cust-overflow">
+
+    </div>
+      <div class="loginbox-submit text-center mrg-top-10">
+        <input type="button" class="btn btn-block cust-btn" value="Submit">
+      </div>
+    </div>
   </div>
+
 
   <!--Basic Scripts-->
   <script src="assets/js/jquery.min.js"></script>
@@ -64,7 +88,21 @@
 
   <!--Beyond Scripts-->
   <script src="assets/js/beyond.js"></script>
-
+<script>
+$(document).ready(function(){
+  $("#forgot").hide();
+  $("#CustBtn").click(function()
+{
+  $("#forgot").show();
+  $("#login").hide();
+})
+$("#Forgot-btn").click(function()
+{
+$("#forgot").hide();
+$("#login").show();
+})
+})
+</script>
 
 </body>
 <!--Body Ends-->
