--- a/job-description.html
+++ b/job-description.html
@@ -360,9 +360,9 @@
           </a>
         </li>
         <li class="active">
-          <a href="jobs.html">
+          <a href="configuration.html">
             <i class="menu-icon fa fa-info pink"></i>
-            <span class="menu-text"> Jobs </span>
+            <span class="menu-text"> Configuration </span>
           </a>
         </li>
         <li>
@@ -622,11 +622,13 @@
           </li>
         </ul>
         <div class="header-right">
-          <a href="" class="btn cust-btn" data-toggle="modal" data-target=".accept-request">Accept</a>
+          <input type="button" class="btn cust-btn" value="Accept"  onclick="javascript: Notify('Your accepted job successfully...', 'top-right', '5000', 'success', 'fa-check', true); return false;">
           <a type="submit" href="" data-toggle="modal" data-target=".create-suborder" class="btn cust-btn">Create Suborder</a>
+          <a type="submit" href="chat.html" class="btn cust-btn">Chat with client</a>
         </div>
       </div>
       <!-- /Page Breadcrumb -->
+      <!-- data-toggle="modal" data-target=".accept-request" -->
 
   <!-- Page Body -->
   <div class="page-body" id="overview">
@@ -641,7 +643,7 @@
               <div class="form-group">
                 <label class="control-label col-sm-5 lbl-pad-top" for="email">Job Title:</label>
                 <div class="col-sm-7">
-                  <p class="form-control-static lbl-pad-top-btm"><a href="chat.html" data-toggle="tooltip" data-placement="top" data-original-title="Request for more information chat with client..." aria-describedby="tooltip776201">	Deep Employee Report</a></p>
+                  <p class="form-control-static lbl-pad-top-btm">Deep Employee Report</p>
                 </div>
               </div>
             </div>
@@ -694,28 +696,41 @@
             Sub Order Information
           </div>
           <div class="row">
-            <div class="col-sm-6">
-              <div class="form-group">
-                <label class="control-label col-sm-5 lbl-pad-top" for="email">Other Requirements:</label>
-                <div class="col-sm-7">
-                  <p class="form-control-static lbl-pad-top-btm">Sample Text</p>
-                </div>
-              </div>
-            </div>
-            <div class="col-sm-6">
-              <div class="form-group">
-                <label class="control-label col-sm-5 lbl-pad-top" for="email">Cost:</label>
-                <div class="col-sm-7">
-                  <p class="form-control-static lbl-pad-top-btm">$600</p>
-                </div>
-              </div>
-            </div>
-            <div class="col-sm-6">
-              <div class="form-group">
-                <label class="control-label col-sm-5 lbl-pad-top" for="email">Effort Hours:</label>
-                <div class="col-sm-7">
-                  <p class="form-control-static lbl-pad-top-btm">10 Weeks</p>
-                </div>
+            <div class="col-sm-12">
+              <div class="table-responsive mrg-top-10">
+                    <table class="table table-striped table-design last-child-one">
+                      <thead>
+                        <tr>
+                          <th>Date</th>
+                          <th>Sub Order Task</th>
+                          <th>Cost</th>
+                          <th>Effort Hours</th>
+                          <th>Additional Informatin</th>
+                          <th>Acceptance</th>
+                          <th>Action</th>
+                        </tr>
+                      </thead>
+                      <tbody>
+                        <tr>
+                          <td>05-03-18</td>
+                          <td>Sub order Task information</td>
+                          <td>$500</td>
+                          <td>60</td>
+                          <td>We are providing additional informatio to proccess data. </td>
+                          <td><div class="checkbox">
+                            <label>
+                              <input type="checkbox" class="colored-primary" id="terms-conditions" checked="">
+                              <span class="text darkgray">Accept suborder</span>
+                            </label>
+                          </div>
+                        </td>
+                        <td>
+                          <a data-toggle="tooltip" data-placement="top" data-original-title="Proceeded to Pay" class="fa fa-money edit edit-fa"></a>
+                        </td>
+                      </tr>
+
+                  </tbody>
+                </table>
               </div>
             </div>
           </div>
@@ -927,7 +942,8 @@
 <script src="assets/js/charts/flot/jquery.flot.js"></script>
 <script src="assets/js/charts/flot/jquery.flot.resize.js"></script>
 
-
+<!--Page Related Scripts-->
+    <script src="assets/js/toastr/toastr.js"></script>
 </body>
 <!--  /Body -->
 </html>
